--- a/src/App.css
+++ b/src/App.css
@@ -18,4 +18,11 @@
 
 .child2 {
   background-color: rgb(228, 228, 228);
+  height: 150px;
+  width: 1000px;
+}
+
+.svg_parent {
+  height: 150px;
+  width: 1000px;
 }
